--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby": "^2.25.3",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-sharp": "^2.8.0",
+    "gatsby-source-contentful": "^4.0.0",
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-sharp": "^2.6.0",
     "react": "^16.12.0",
